--- a/playgrounds/WelcomePage.html
+++ b/playgrounds/WelcomePage.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>EES</title>
+	<link rel="stylesheet" type="text/css" href="./../styles/main.css">
 </head>
 <body>
 	<h1>English Examination System</h1>
